recursion.cons.min.Min.scala.error
Compilation error:
Min:4: error: not found: value t
  t = l.tail;
  ^Min:6: error: not found: value t
  if(t == Nil)
     ^Min:12: error: not found: value t
    if(t.head < l.head)
       ^Min:14: error: not found: value t
      return min(t);
                 ^Min:19: error: not found: value t
      return(l.head::t.tail);
                     ^